--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-prisma-devtools",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Adds Prisma Studio to Nuxt Devtools",
   "repository": "gsxdsm/nuxt-prisma-devtools",
   "license": "MIT",
@@ -39,7 +39,9 @@
     "@nuxt/test-utils": "^3.15.1",
     "@types/node": "latest",
     "changelogen": "^0.5.7",
+    "prisma": "^6.1.0",
     "eslint": "^9.16.0",
+    "execa": "9.5.2",
     "nuxt": "^3.14.1592",
     "typescript": "~5.6.3",
     "vitest": "^2.1.8",
