--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-prisma-devtools",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Adds Prisma Studio to Nuxt Devtools",
   "repository": "gsxdsm/nuxt-prisma-devtools",
   "license": "MIT",
@@ -29,21 +29,22 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.14.1592"
+    "@nuxt/devtools-kit": "^1.3.3",
+    "@nuxt/kit": "^3.14.1592",
+    "execa": "^8.0.1"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.6.3",
-    "@nuxt/eslint-config": "^0.7.2",
+    "@nuxt/devtools": "^1.6.4",
+    "@nuxt/eslint-config": "^0.7.4",
     "@nuxt/module-builder": "^0.8.4",
     "@nuxt/schema": "^3.14.1592",
     "@nuxt/test-utils": "^3.15.1",
     "@types/node": "latest",
     "changelogen": "^0.5.7",
-    "prisma": "^6.1.0",
-    "eslint": "^9.16.0",
-    "execa": "9.5.2",
+    "eslint": "^9.17.0",
+    "execa": "^8.0.1",
     "nuxt": "^3.14.1592",
-    "typescript": "~5.6.3",
+    "typescript": "~5.7.2",
     "vitest": "^2.1.8",
     "vue-tsc": "^2.1.10"
   },
