feat: add Prisma support and update Vite configuration

--- a/playground/package.json
+++ b/playground/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "nuxt": "^3.14.1592",
-    "prisma": "^6.1.0"
+    "prisma": "^6.1.0",
+    "@prisma/client": "^6.1.0"
   }
 }
